# VictoryEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
Victory/: CMakeLists.txt
Victory/src/: Victory.h
Victory/src/Victory/: Application.cpp  Application.h  EntryPoint.h  Log.cpp  Log.h
